syntax = "proto3";

package messenger;

option csharp_namespace = "messenger";

message EmptyRequest{}

message StreamResponse{ string content=1;}

message StreamRequest{ string content=1;}

service Messenger{
	rpc ServerStream (EmptyRequest) returns (stream StreamResponse);
	rpc ClientStream (stream StreamRequest) returns (StreamResponse);
}